# rust-mizan

./: .gitignore  .gitmodules  ARTIFACT_EVALUATION.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  extract_vulnerable_functions.py  get_crate.sh  mizan.json
.github/: pull_request_template.md
mizan-cli/: README.md  pyproject.toml  run_eval.py  run_eval_claude_code.py
mizan-cli/scripts/: parquet_to_legacy_json.py  prompt_template.md  system_prompt.md
mizan-cli/src/mizan_cli/: cli.py
mizan-cli/src/mizan_cli/assets/: __init__.py
mizan-cli/src/mizan_cli/assets/evaluate/: prompt_template.md
mizan-cli/src/mizan_cli/commands/: __init__.py
mizan-cli/src/mizan_cli/inspect_benchmark/: __init__.py  compose.yaml  dataset.py  rustmizan.py  scorer.py  solver.py
mizan-cli/src/mizan_cli/metrics/: data_utils.py  metrics.py
mizan-cli/src/mizan_cli/utils/: __init__.py  config.py  logging.py
mizan-cli/tests/commands/evaluate/: test_evaluators.py  test_summary_evaluators.py
mizan-mut/: Cargo.toml  README.md
mizan-mut/src/: main.rs  mutate.rs  rename.rs
mizan-mut/src/mutations/: arithmetic_identity.rs  derive_reorder.rs  explicit_return.rs  explicit_where.rs  explicit_where_to_type_params.rs  extraneous_unsafe.rs  for_to_while.rs  if_else_reorder.rs  impl_trait_to_generic.rs  manually_drop_wrap.rs  maybe_uninit_wrap.rs  mod.rs  option_wrap.rs  rename_lifetime.rs  repeated_shadowing.rs  trait_bound_reorder.rs  unreachable_panic.rs  use_reorder.rs  while_to_loop.rs
paper_evaluation_section/program_analysis_tools/kani/: Cargo.toml
paper_evaluation_section/program_analysis_tools/kani/src/: tests.rs
samples/vuln-0002/sample-10002-crate/: Cargo.toml
samples/vuln-0013/sample-00013-crate/: Cargo.toml
samples/vuln-0026/sample-10026-file/: Cargo.toml
samples/vuln-0026/sample-10026-file/src/: lib.rs
samples/vuln-0029/sample-10029-function/: Cargo.toml
samples/vuln-0029/sample-10029-function/src/: prc.rs
samples/vuln-0033/sample-10033-crate/: Cargo.toml
samples/vuln-0043/sample-00043-crate/: Cargo.toml
samples/vuln-0043/sample-00043-crate/src/: error.rs  format.rs  header.rs  kdf.rs  lib.rs  mini.rs
samples/vuln-0046/sample-10046-function/: Cargo.toml
samples/vuln-0046/sample-10046-function/src/: lib.rs
samples/vuln-0050/sample-00050-crate/: Cargo.toml
samples/vuln-0050/sample-00050-crate/src/: date.rs  datetime.rs  lib.rs  round.rs
samples/vuln-0051/sample-10051-file/: Cargo.toml
samples/vuln-0051/sample-10051-file/src/: lib.rs
sprout-pipeline/: .gitignore  README.md  fmt_update_ground_truth.py  pyproject.toml
sprout-pipeline/mini-mizan/: Cargo.toml  mizan.json
sprout-pipeline/mini-mizan/vuln-0001/fixed-crate/: Cargo.toml
sprout-pipeline/mini-mizan/vuln-0001/vuln-crate/: Cargo.toml
sprout-pipeline/prompts/: detect_k_vulnerability_claude.md  detect_top_k_vulnerability_gpt.md  system_prompt_detect_vulnerability.md
sprout-pipeline/src/sprout_pipeline/: __init__.py  cli_run_task.py  loader.py  models.py  runner.py
sprout-pipeline/src/sprout_pipeline/prompts/: CWEs.txt  check_cve.md  check_cve.txt  check_cve_new.md  check_cve_system_prompt.md  detect_k_vulnerability_gpt.md  detect_top_k_vulnerability_claude.md  detect_vulnerability.md  detect_vulnerability_claude.md  detect_vulnerability_gpt.md  detect_vulnerability_new.md  detect_vulnerability_rank.md  detect_vulnerability_system_prompt.md  extract_CWEs.sh  identify_crate.md  identify_crate.txt  identify_crate_new.md  identify_crate_system_prompt.md
sprout-pipeline/src/sprout_pipeline/tasks/: __init__.py  base.py  check_cve.py  identify_crate.py  vuln.py
variants/18-vulns/: Cargo.toml  mizan.json
variants/18-vulns/vuln-0002/: README.md
variants/18-vulns/vuln-0003/fixed-function/: Cargo.toml
variants/18-vulns/vuln-0003/vuln-crate/: Cargo.toml
variants/18-vulns/vuln-0004/vuln-crate/: Cargo.toml
variants/18-vulns/vuln-0006/fixed-crate/: Cargo.toml
variants/18-vulns/vuln-0007/: README.md
variants/18-vulns/vuln-0007/vuln-crate/: Cargo.toml
variants/18-vulns/vuln-0007/vuln-function/: Cargo.toml
variants/18-vulns/vuln-0009/: README.md
variants/18-vulns/vuln-0009/vuln-file/: Cargo.toml
variants/18-vulns/vuln-0010/fixed-crate/: Cargo.toml
variants/18-vulns/vuln-0010/vuln-file/: Cargo.toml
variants/18-vulns/vuln-0010/vuln-function/: Cargo.toml
variants/18-vulns/vuln-0012/fixed-crate/: Cargo.toml
variants/18-vulns/vuln-0012/fixed-function/: Cargo.toml
variants/18-vulns/vuln-0013/cargo-minimize-files/: run_test.sh
variants/18-vulns/vuln-0013/fixed-function/: Cargo.toml
variants/18-vulns/vuln-0013/vuln-function/: Cargo.toml
variants/18-vulns/vuln-0017/vuln-crate/: Cargo.toml
variants/18-vulns/vuln-0020/: README.md
variants/18-vulns/vuln-0020/fixed-file/: Cargo.toml
variants/18-vulns/vuln-0024/fixed-function/: Cargo.toml
variants/18-vulns/vuln-0024/vuln-crate/: Cargo.toml
variants/18-vulns/vuln-0024/vuln-function/: Cargo.toml
variants/18-vulns/vuln-0026/vuln-crate/: Cargo.toml
variants/18-vulns/vuln-0027/fixed-file/: Cargo.toml
variants/18-vulns/vuln-0027/vuln-crate/: Cargo.toml
variants/18-vulns/vuln-0028/fixed-function/: Cargo.toml
variants/18-vulns/vuln-0028/vuln-crate/: Cargo.toml
variants/18-vulns/vuln-0028/vuln-function/: Cargo.toml
variants/18-vulns/vuln-0033/vuln-crate/: Cargo.toml
vuln-0005/fixed-file/: Cargo.toml
vuln-0005/fixed-file/src/: lib.rs
vuln-0008/fixed-crate/: Cargo.toml
vuln-0008/fixed-crate/src/: mpsc.rs
vuln-0014/fixed-crate/: Cargo.toml
vuln-0014/fixed-crate/src/: lib.rs
vuln-0014/fixed-function/: Cargo.toml
vuln-0014/fixed-function/src/: lib.rs
vuln-0018/vuln-file/: Cargo.toml
vuln-0029/fixed-function/: Cargo.toml
vuln-0029/fixed-function/src/: lib.rs  prc.rs  sync.rs
vuln-0029/vuln-crate/: Cargo.toml
vuln-0029/vuln-crate/src/: prc.rs  sync.rs
vuln-0041/vuln-function/: Cargo.toml
vuln-0041/vuln-function/src/: hash.rs  lib.rs  sections.rs
vuln-0042/fixed-function/: Cargo.toml
vuln-0042/fixed-function/src/: lib.rs
vuln-0042/vuln-crate/: Cargo.toml
vuln-0042/vuln-crate/src/: lib.rs
(+1746 files in other folders)
