[workspace]
resolver = "2"

members = [
    "mizan-mut",

    "vuln-0001/vuln-function",
    "vuln-0001/vuln-file",
    "vuln-0001/vuln-crate",

    "vuln-0001/fixed-file",
    "vuln-0001/fixed-function",
    "vuln-0001/fixed-crate",

    "vuln-0002/vuln-function",
    "vuln-0002/vuln-file",
    "vuln-0002/vuln-crate",

    "vuln-0002/fixed-function",
    "vuln-0002/fixed-file",
    "vuln-0002/fixed-crate",

    "vuln-0003/vuln-crate",
    "vuln-0003/vuln-file",
    "vuln-0003/vuln-function",

    "vuln-0003/fixed-crate",
    "vuln-0003/fixed-file",
    "vuln-0003/fixed-function",

    "vuln-0004/vuln-function",
    "vuln-0004/vuln-file",
    "vuln-0004/vuln-crate",

    "vuln-0005/vuln-function",
    "vuln-0005/vuln-file",
    "vuln-0005/vuln-crate",

    "vuln-0005/fixed-function",
    "vuln-0005/fixed-file",
    "vuln-0005/fixed-crate",

    "vuln-0006/vuln-crate",
    "vuln-0006/vuln-function",
    "vuln-0006/vuln-file",

    "vuln-0006/fixed-crate",
    "vuln-0006/fixed-file",
    "vuln-0006/fixed-function",

    "vuln-0007/vuln-crate",
    "vuln-0007/vuln-file",
    "vuln-0007/vuln-function",

    "vuln-0008/vuln-crate",
    "vuln-0008/vuln-function",

    "vuln-0008/fixed-crate",
    "vuln-0008/fixed-function",

    "vuln-0009/vuln-crate",
    "vuln-0009/vuln-file",
    "vuln-0009/vuln-function",

    "vuln-0010/vuln-crate",
    "vuln-0010/vuln-file",
    "vuln-0010/vuln-function",

    "vuln-0010/fixed-crate",
    "vuln-0010/fixed-file",
    "vuln-0010/fixed-function",

    "vuln-0011/vuln-crate",
    "vuln-0011/vuln-function",

    "vuln-0011/fixed-crate",
    "vuln-0011/fixed-function",

    "vuln-0012/vuln-crate",
    "vuln-0012/vuln-file",
    "vuln-0012/vuln-function",

    "vuln-0012/fixed-crate",
    "vuln-0012/fixed-file",
    "vuln-0012/fixed-function",

    "vuln-0013/vuln-crate",
    "vuln-0013/vuln-file",
    "vuln-0013/vuln-function",

    "vuln-0013/fixed-crate",
    "vuln-0013/fixed-file",
    "vuln-0013/fixed-function",

    "vuln-0014/vuln-crate",
    "vuln-0014/vuln-file",
    "vuln-0014/vuln-function",

    "vuln-0014/fixed-crate",
    "vuln-0014/fixed-file",
    "vuln-0014/fixed-function",

    "vuln-0015/vuln-crate",
    "vuln-0015/vuln-function",

    "vuln-0016/vuln-crate",
    "vuln-0016/vuln-function",

    "vuln-0017/vuln-crate",
    "vuln-0017/vuln-function",

    "vuln-0018/fixed-crate",
    "vuln-0018/fixed-file",
    "vuln-0018/fixed-function",

    "vuln-0019/vuln-crate",
    "vuln-0019/vuln-file",
    "vuln-0019/vuln-function",

    "vuln-0019/fixed-crate",
    "vuln-0019/fixed-file",
    "vuln-0019/fixed-function",

    "vuln-0020/vuln-crate",
    "vuln-0020/vuln-file",
    "vuln-0020/vuln-function",

    "vuln-0020/fixed-crate",
    "vuln-0020/fixed-file",
    "vuln-0020/fixed-function",

    "vuln-0021/vuln-crate",
    "vuln-0021/vuln-file",
    "vuln-0021/vuln-function",

    "vuln-0021/fixed-crate",
    "vuln-0021/fixed-file",
    "vuln-0021/fixed-function",

    "vuln-0022/vuln-crate",
    "vuln-0022/vuln-file",
    "vuln-0022/vuln-function",

    "vuln-0022/fixed-crate",
    "vuln-0022/fixed-file",
    "vuln-0022/fixed-function",

    "vuln-0023/vuln-crate",
    "vuln-0023/vuln-file",
    "vuln-0023/vuln-function",

    "vuln-0023/fixed-crate",
    "vuln-0023/fixed-file",
    "vuln-0023/fixed-function",

    "vuln-0024/vuln-crate",
    "vuln-0024/vuln-function",

    "vuln-0024/fixed-crate",
    "vuln-0024/fixed-function",

    "vuln-0025/vuln-crate",
    "vuln-0025/vuln-function",

    "vuln-0025/fixed-crate",
    "vuln-0025/fixed-function",

    "vuln-0026/vuln-crate",
    "vuln-0026/vuln-file",
    "vuln-0026/vuln-function",

    "vuln-0026/fixed-crate",
    "vuln-0026/fixed-file",
    "vuln-0026/fixed-function",

    "vuln-0027/vuln-crate",
    "vuln-0027/vuln-file",

    "vuln-0027/fixed-crate",
    "vuln-0027/fixed-file",

    "vuln-0028/vuln-crate",
    "vuln-0028/vuln-function",

    "vuln-0028/fixed-crate",
    "vuln-0028/fixed-function",

    "vuln-0029/vuln-crate",
    "vuln-0029/vuln-function",

    "vuln-0029/fixed-crate",
    "vuln-0029/fixed-function",

    "vuln-0030/vuln-crate",

    "vuln-0030/fixed-crate",

    "vuln-0031/vuln-crate",

    "vuln-0031/fixed-crate",

    "vuln-0032/vuln-crate",

    "vuln-0032/fixed-crate",

    "vuln-0033/vuln-crate",

    "vuln-0033/fixed-crate",

    "vuln-0034/vuln-crate",

    "vuln-0034/fixed-crate",

    "vuln-0035/vuln-crate",

    "vuln-0035/fixed-crate",

    "vuln-0036/vuln-crate",

    "vuln-0036/fixed-crate",

    "vuln-0037/vuln-crate",

    "vuln-0037/fixed-crate",

    "vuln-0038/vuln-crate",
    "vuln-0038/vuln-function",

    "vuln-0039/fixed-crate",
    "vuln-0039/fixed-function",
    "vuln-0039/vuln-crate",
    "vuln-0039/vuln-function",

    "vuln-0040/fixed-crate",
    "vuln-0040/fixed-function",
    "vuln-0040/vuln-crate",
    "vuln-0040/vuln-function",

    "vuln-0041/vuln-crate",
    "vuln-0041/vuln-function",
    "vuln-0041/fixed-crate",
    "vuln-0041/fixed-function",

    "vuln-0042/vuln-crate",
    "vuln-0042/vuln-file",
    "vuln-0042/vuln-function",

    "vuln-0042/fixed-crate",
    "vuln-0042/fixed-file",
    "vuln-0042/fixed-function"
]
