[workspace]
resolver = "2"

members = [
    "mizan-mut",


    # All code samples are in the samples directory
    # Samples use pattern: sample-XNNNN-level where:
    # - X is 0 for vulnerable, 1 for fixed (not obvious to LLMs)
    # - NNNN is the sample ID
    # - level is function/file/crate
    "samples/vuln-*/sample-*-function",
    "samples/vuln-*/sample-*-file",
    "samples/vuln-*/sample-*-crate",
]
