[tool.poetry]
name = "mizan-cli"
version = "0.1.0"
description = "CLI tool for interacting with RustMizan dataset"
authors = ["Tarek Elsayed"]
readme = "README.md"
packages = [{ include = "mizan_cli", from = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.2.1"
rich = "^14.0.0"
pydantic = "^2.11.7"
openai = ">=2.8.0"
anthropic = ">=0.75.0"
google-genai = "^1.24.0"
pyarrow = "^21.0.0"
inspect-ai = "^0.3.170"
inspect-evals = "^0.3.106"

[tool.poetry.scripts]
mizan = "mizan_cli.cli:main"

[tool.poetry.group.dev.dependencies]
black = "^24.0.0"
ruff = "^0.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
