[tool.poetry]
name = "mizan-cli"
version = "0.1.0"
description = "CLI tool for interacting with RustMizan dataset"
authors = ["Tarek Elsayed"]
readme = "README.md"
packages = [{ include = "mizan_cli", from = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.7"
rich = "^14.3.2"
pydantic = "^2.12.5"
pyarrow = "^23.0.0"
inspect-ai = "^0.3.183"
inspect-swe = "^0.2.0"
# Model-provider SDKs. inspect-ai treats these as optional; we pin them here
# so `poetry install` alone is enough to run the default run_eval.py MODELS.
openai = "^2.17.0"
anthropic = "^0.80.0"
google-genai = "^1.56.0"

[tool.poetry.scripts]
mizan = "mizan_cli.cli:main"

[tool.poetry.group.dev.dependencies]
black = "^26.1.0"
ruff = "^0.14.14"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
