[package]
name = "vuln-0005-fixed-file"
version = "0.1.0"
edition = "2021"


[dependencies]
bytemuck = "1"
byteorder = "1.3.2"
num-iter = "0.1.32"
num-rational = { version = "0.3", default-features = false }
num-traits = "0.2.0"
gif = { version = "0.11.1", optional = true }
jpeg = { package = "jpeg-decoder", version = "0.1.17", default-features = false, optional = true }
png = { version = "0.16.5", optional = true }
scoped_threadpool = { version = "0.1", optional = true }
tiff = { version = "0.6.0", optional = true }
ravif = { version = "0.11.11", optional = true }
rgb = { version = "0.8.25", optional = true }
color_quant = "1.1"

[features]
default = ["gif", "jpeg", "ico", "png", "pnm", "tga", "tiff", "webp", "bmp", "hdr", "dxt", "dds", "farbfeld", "jpeg_rayon"]

ico = ["bmp", "png"]
pnm = []
tga = []
webp = []
bmp = []
hdr = ["scoped_threadpool"]
dxt = []
dds = ["dxt"]
farbfeld = []
# Enables multi-threading.
# Requires latest stable Rust.
jpeg_rayon = ["jpeg/rayon"]
# Non-default, enables avif encoding.
# Requires latest stable Rust.
avif = ["ravif", "rgb"]