[package]
name = "vuln-0014-fixed-function"
version = "0.1.0"
edition = "2018"

[badges]
travis-ci = { repository = "llogiq/compact_arena" }

[features]
uninit = []
alloc = []
default = ["alloc"]

[dev-dependencies]
compiletest_rs = { version = "0.3", features = [ "stable" ] }
crossbeam-utils = "0.6.5"
