[package]
name = "vuln-0014-fixed-function"
version = "0.1.0"
edition = "2021"

[badges]
travis-ci = { repository = "llogiq/compact_arena" }

[features]
# This feature is deprecated and will be removed in a future version. As of
# 0.4.0, all Tiny- and NanoArenas use `MaybeUninit` to manage their data.
uninit = []
alloc = []
default = ["alloc"]

[dev-dependencies]
compiletest_rs = { version = "0.3", features = [ "stable" ] }
crossbeam-utils = "0.6.5"
