[package]
name = "vuln-0018-vuln-file"
version = "0.1.0"
edition = "2021"

[features]
default = ["std"]
std = []
ringbuffer = ["array-ops"]

[dependencies]
typenum = "1.11.2"
bitmaps = "2.0.0"
array-ops = { version = "0.1", optional = true }
refpool = { version = "0.4", optional = true }
arbitrary = { version = "0.4", optional = true }

[dev-dependencies]
criterion = "0.3"

