[package]
name = "vuln-0029-fixed-function"
version = "0.4.0"
authors = ["Radek Vít <radekvitr@gmail.com>"]
edition = "2021"
rust-version = "1.56"
description = "Projected reference counted pointers"
repository = "https://github.com/radekvit/pared"
license = "MIT OR Apache-2.0"
keywords = ["arc", "rc", "projected", "aliasing", "shared_ptr"]
categories = ["data-structures", "memory-management", "no-std", "rust-patterns"]

[features]
default = ["std"]
std = []

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }

[dependencies]

[dev-dependencies]
doc-comment = "0.3.3"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg=docsrs"]
