[package]
name = "fast-float2"
version = "0.2.1"
# FIXME: rust-version is not supported until 1.56.0.
rust-version = "1.37"

[features]
default = ["std"]
std = []

[dev-dependencies]
lexical-core = "1.0.2"
hexf-parse = "0.2.1"
ryu = "1.0"
fastrand = "2.1.1"
num-bigint = "0.4.6"

[workspace]
members = [".", "extras/data-tests", "extras/simple-bench"]

[profile.release]
lto = "fat"
codegen-units = 1

[package.metadata.docs.rs]
features = ["std"]
