[package]
name = "sample-10002-crate"
version = "0.1.0"
edition = "2021"


[features]
# Enable some more, experimental strategies.
# **These are not part of the stability guarantees** and may be changed, renamed
# or removed at any time.
experimental-strategies = []
# ArcSwapWeak (for std::sycn::Weak) support
weak = []

[dependencies]

[dev-dependencies]
criterion = "~0.3"
crossbeam-utils = "~0.7"
itertools = "~0.9"
num_cpus = "~1"
once_cell = "~1"
parking_lot = "~0.11"
proptest = "~0.10"
