[package]
name = "sample-10029-function"
version = "0.4.0"

[features]
default = ["std"]
std = []

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }

[dependencies]

[dev-dependencies]
doc-comment = "0.3.3"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg=docsrs"]
