[package]
name = "sample-10033-crate"
version = "0.1.0"
edition = "2021"

[features]
load_extension = []
# hot-backup interface: 3.6.11 (2009-02-18)
backup = ["libsqlite3-sys-18/min_sqlite_version_3_6_23"]
# sqlite3_blob_reopen: 3.7.4
blob = ["libsqlite3-sys-18/min_sqlite_version_3_7_7"]
collation = []
# sqlite3_create_function_v2: 3.7.3 (2010-10-08)
functions = ["libsqlite3-sys-18/min_sqlite_version_3_7_7"]
# sqlite3_log: 3.6.23 (2010-03-09)
trace = ["libsqlite3-sys-18/min_sqlite_version_3_6_23"]
bundled = ["libsqlite3-sys-18/bundled", "modern_sqlite"]
buildtime_bindgen = ["libsqlite3-sys-18/buildtime_bindgen"]
limits = []
hooks = []
i128_blob = ["byteorder"]
sqlcipher = ["libsqlite3-sys-18/sqlcipher"]
unlock_notify = ["libsqlite3-sys-18/unlock_notify"]
# xSavepoint, xRelease and xRollbackTo: 3.7.7 (2011-06-23)
vtab = ["libsqlite3-sys-18/min_sqlite_version_3_7_7", "lazy_static"]
csvtab = ["csv", "vtab"]
# pointer passing interfaces: 3.20.0
array = ["vtab"]
# session extension: 3.13.0
session = ["libsqlite3-sys-18/session", "hooks"]
# window functions: 3.25.0
window = ["functions"]
# 3.9.0
series = ["vtab"]
# check for invalid query.
extra_check = []
modern_sqlite = ["libsqlite3-sys-18/bundled_bindings"]
in_gecko = ["modern_sqlite", "libsqlite3-sys-18/in_gecko"]
bundled-windows = ["libsqlite3-sys-18/bundled-windows"]
# Build bundled sqlite with -fsanitize=address
with-asan = ["libsqlite3-sys-18/with-asan"]

# Helper feature for enabling both `bundled` and most non-build-related optional
# features or dependencies. This is useful for running tests / clippy / etc. New
# features and optional dependencies that don't conflict with anything else
# should be added here.
bundled-full = [
    "array",
    "backup",
    "blob",
    "bundled",
    "chrono",
    "collation",
    "csvtab",
    "extra_check",
    "functions",
    "hooks",
    "i128_blob",
    "limits",
    "load_extension",
    "serde_json",
    "series",
    "trace",
    "unlock_notify",
    "url",
    "uuid",
    "vtab",
    "window",
]

[dependencies]
time = "0.1.0"
bitflags = "1.0"
lru-cache = "0.1"
chrono = { version = "0.4", optional = true }
serde_json = { version = "1.0", optional = true }
csv = { version = "1.0", optional = true }
url = { version = "2.0", optional = true }
lazy_static = { version = "1.0", optional = true }
byteorder = { version = "1.2", features = ["i128"], optional = true }
fallible-iterator = "0.2"
fallible-streaming-iterator = "0.1"
memchr = "2.2.0"
uuid = { version = "0.8", optional = true }
smallvec = "1.3"

[dev-dependencies]
doc-comment = "0.3"
tempfile = "3.1.0"
lazy_static = "1.0"
regex = "1.0"
uuid = { version = "0.8", features = ["v4"] }
unicase = "2.4.0"
# Use `bencher` over criterion becasue it builds much faster and we don't have
# many benchmarks
bencher = "0.1"

[dependencies.libsqlite3-sys-18]
path = "../../deps/libsqlite3-sys-18"
version = "0.18.0"
