[package]
name = "sample-00043-crate"
version = "0.1.0"
edition = "2021"

[dependencies]
aes-gcm = {version = "0.10", default-features = false, features = ["aes"]}
chacha20poly1305 = {version = "0.10", default-features = false}
hmac = "0.11"
pbkdf2 = {version = "0.9", default-features = false, features = ["sha2", "hmac"]}
rand = {version = "0.8", default-features = false, features = ["std_rng"]}
sha2 = {version = "0.9", default-features = false}
zeroize = {version = "1", default-features = false}

[dev-dependencies]
borsh = "0.9"

[features]
# Enables `std` feature by default.
default = ["std"]

# Enables all features, including support of simplified Cocoon API, using `rand::thread_rng`,
# and API related to `std::io`: wrap to writer, unwrap from reader.
std = ["alloc", "rand/std"]

# Enables `Vec` container. Can be used without `std` crate (in "no std" build).
alloc = ["chacha20poly1305/alloc"]

# Enables support of Cocoon::from_entropy() which gets random bytes from OsRng.
getrandom = ["rand/getrandom"]

