[package]
name = "sample-10046-function"
version = "0.1.0"
edition = "2021"

[dependencies]
num-traits = { version = "0.2.1", default-features = false }
serde = { version = "1.0", optional = true, default-features = false }

[dev-dependencies]
serde_test = "1.0"

[features]
default = ["std"]
std = ["num-traits/std"]
