[package]
name = "sample-10051-file"
version = "0.1.0"
edition = "2021"

[profile.test]
opt-level = 3

[profile.dev]
opt-level = 3
incremental = false

[dependencies]
byteorder = "1.3"
crc32fast = "1.2"
flate2 = { version = "1.0", features = ["rust_backend"], default-features = false }

[dev-dependencies]
rand = "0.7"
glob = "0.3"
