[package]
name = "vuln-0026-vuln-crate"
version = "0.1.0"
edition = "2021"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
with-serde = ["serde", "serde_derive"]

[dependencies]
libc = "0.2.39"
serde = { version = "1.0.27", optional = true }
serde_derive = { version = "1.0.27", optional = true }

[target.'cfg(any(target_os = "linux", target_os = "android"))'.dependencies]
bitflags = "1.0"

[dev-dependencies]
serde_json = "1.0.9"
