[package]
name = "vuln-0028-vuln-function"
version = "0.1.0"
edition = "2018"

exclude = ["*.png", "*.svg", "/Cargo.lock.min", "/.travis.yml", "/run-miri-tests.sh", "rustfmt.toml"]

[dependencies]
# Uses parking_lot to implement once_cell::sync::OnceCell.
# This makes not speed difference, but makes each OnceCell<T>
# for up to two bytes smaller, depending on the size of the T.
parking_lot = { version = "0.9.0", optional = true, default_features = false }

[dev-dependencies]
lazy_static = "1.0.0"
crossbeam-utils = "0.6.0"
regex =  "1.2.0"

[features]
default = ["std"]
# Enables `once_cell::sync` module.
std = []
